# konakore_postgre

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.deployment.yaml  docker-compose.yaml
api/: Dockerfile  api.py  models.py  pyproject.toml  requirements.txt  utils.py
api/routers/: posts.py  stats.py  tags.py  tasks.py  users.py
docs/: action_4_python_api.md  all_in_one_db.md  init.md  konachan-relevance-scoring.prompt.md  pgvector-recommendation.md  setup_registry.md  v1_api_summary.md
file_sync/: Dockerfile  config.py  db.py  main.py  pyproject.toml  requirements.txt  scheduler.py  webhook.py
file_sync/jobs/: __init__.py  download_status_check.py  liked_posts_sync.py  unliked_posts_cleanup.py
file_sync/utils/: __init__.py  aria_utils.py  file_utils.py  url_utils.py
frontend/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  stats-mock.html  vite.config.js
frontend/src/: App.css  App.jsx  main.jsx
frontend/src/api/: index.js
frontend/src/i18n/: en.json  (+2 more)
migrations/: 001_initial_schema.sql  002_sync_functions.sql  002_task_state.sql  003_bootstrap_schedulers.sql  003_pgvector.sql
prompts/: action_3_python_scheduler.md
scheduler/: Dockerfile  config.py  db.py  main.py  pyproject.toml  requirements.txt  runner.py  scheduler.py
scheduler/jobs/: file_sync.py  likes.py  post_tags.py  posts.py  recent.py  tags.py
worker/: Dockerfile  file_sync.go  go.mod  http.go  jobs_embeddings.go  jobs_index.go  jobs_posts.go  jobs_tags.go  main.go  status_helpers.go  task_state.go  tasks.go  util.go
(+26 files in other folders)
