[project]
name = "konakore-api"
version = "1.0.0"
description = "Konakore API - FastAPI backend for managing posts, tags, and user preferences"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.109.0",
    "pydantic>=2.0.0",
    "uvicorn[standard]>=0.27.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
