[project]
name = "konakore-file-sync"
version = "1.0.0"
description = "Konakore File Sync - File synchronization service with webhook support"
requires-python = ">=3.9"
dependencies = [
    "psycopg2-binary>=2.9.9",
    "requests>=2.31.0",
    "websocket-client>=1.7.0",
    "flask>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
