[project]
name = "konakore-scheduler"
version = "1.0.0"
description = "Konakore Scheduler - Background job scheduler for data synchronization"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "psycopg2-binary>=2.9.9",
    "schedule>=1.2.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
